{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 15,
  "lineage": "3dabfabd-a8a7-6418-b5e1-8e331fae633c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "for_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d1959ccfd7e7708",
            "arn": "arn:aws:ec2:ap-south-2:862066027316:elastic-ip/eipalloc-09d1959ccfd7e7708",
            "association_id": "eipassoc-0040d2d935eae499a",
            "domain": "vpc",
            "id": "eipalloc-09d1959ccfd7e7708",
            "network_border_group": "ap-south-2",
            "network_interface": "eni-0ee10ef09b33e68f1",
            "private_dns": "ip-172-168-1-235.ap-south-2.compute.internal",
            "private_ip": "172.168.1.235",
            "public_dns": "ec2-18-60-113-87.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.60.113.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_for_NAT"
            },
            "tags_all": {
              "Name": "EIP_for_NAT"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-008616ec4a2c6975e",
            "arn": "arn:aws:ec2:ap-south-2:862066027316:instance/i-0274b33d7af074a33",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0274b33d7af074a33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "hyderabad",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af02492593a27d0f",
            "private_dns": "ip-172-168-2-204.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.2.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02e85cdbf1c483060",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a1dd305b2e2d0be",
            "tags": {
              "Name": "PrivateInstance"
            },
            "tags_all": {
              "Name": "PrivateInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db99aff893f452dc"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-008616ec4a2c6975e",
            "arn": "arn:aws:ec2:ap-south-2:862066027316:instance/i-09e6e56a3daaffbf1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e6e56a3daaffbf1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "hyderabad",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09b13c635cac5be58",
            "private_dns": "ip-172-168-1-62.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.168.1.62",
            "public_ip": "18.60.44.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-086d563d4d4ec7a33",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03208ede56328a851",
            "tags": {
              "Name": "PublicInstance"
            },
            "tags_all": {
              "Name": "PublicInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db99aff893f452dc"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "first_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:862066027316:internet-gateway/igw-036b9d76c426fcbea",
            "id": "igw-036b9d76c426fcbea",
            "owner_id": "862066027316",
            "tags": {
              "Name": "MyIGW"
            },
            "tags_all": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-017f0c0e1ec54eead"
          },
          "dependencies": [
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "First_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d1959ccfd7e7708",
            "association_id": "eipassoc-0040d2d935eae499a",
            "connectivity_type": "public",
            "id": "nat-06e3ff6726bc7786a",
            "network_interface_id": "eni-0ee10ef09b33e68f1",
            "private_ip": "172.168.1.235",
            "public_ip": "18.60.113.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03208ede56328a851",
            "tags": {
              "Name": "1stNATGateway"
            },
            "tags_all": {
              "Name": "1stNATGateway"
            }
          },
          "dependencies": [
            "aws_eip.for_NAT",
            "aws_subnet.public_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:862066027316:route-table/rtb-09925e108d2fcaa11",
            "id": "rtb-09925e108d2fcaa11",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e3ff6726bc7786a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "Name": "PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-017f0c0e1ec54eead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.for_NAT",
            "aws_nat_gateway.First_nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:862066027316:route-table/rtb-02cdee7362cdc6cf6",
            "id": "rtb-02cdee7362cdc6cf6",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-036b9d76c426fcbea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.168.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e3ff6726bc7786a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-017f0c0e1ec54eead"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.for_NAT",
            "aws_internet_gateway.first_igw",
            "aws_nat_gateway.First_nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0986c58ac770dc7d5",
            "route_table_id": "rtb-09925e108d2fcaa11",
            "subnet_id": "subnet-07a1dd305b2e2d0be"
          },
          "dependencies": [
            "aws_eip.for_NAT",
            "aws_nat_gateway.First_nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d64abed212348a8",
            "route_table_id": "rtb-02cdee7362cdc6cf6",
            "subnet_id": "subnet-03208ede56328a851"
          },
          "dependencies": [
            "aws_eip.for_NAT",
            "aws_internet_gateway.first_igw",
            "aws_nat_gateway.First_nat_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:862066027316:subnet/subnet-07a1dd305b2e2d0be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "172.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a1dd305b2e2d0be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-017f0c0e1ec54eead"
          },
          "dependencies": [
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:862066027316:subnet/subnet-03208ede56328a851",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "172.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03208ede56328a851",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-017f0c0e1ec54eead"
          },
          "dependencies": [
            "aws_vpc.My1stVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "My1stVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:862066027316:vpc/vpc-017f0c0e1ec54eead",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.168.0.0/16",
            "default_network_acl_id": "acl-0da6d56d6fe3d35c1",
            "default_route_table_id": "rtb-0ba4611d9417872cb",
            "default_security_group_id": "sg-0db99aff893f452dc",
            "dhcp_options_id": "dopt-0d2790b19d30d1f4f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017f0c0e1ec54eead",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba4611d9417872cb",
            "owner_id": "862066027316",
            "tags": {
              "Name": "*******************"
            },
            "tags_all": {
              "Name": "*******************"
            }
          }
        }
      ]
    }
  ]
}